Bug 276410 - Geometry issue - phone number widget doesn't resize height
Summary: Geometry issue - phone number widget doesn't resize height
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-24 19:59 UTC by Elias Probst
Modified: 2012-11-16 09:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
Screenshot showing the geometry issues of the "edit contact" window (78.14 KB, image/png)
2011-06-24 19:59 UTC, Elias Probst
Details
Screenshot of issue in KDE 4.8.0 (77.48 KB, image/png)
2012-02-02 04:24 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2011-06-24 19:59:29 UTC
Created attachment 61305 [details]
Screenshot showing the geometry issues of the "edit contact" window

Version:           unspecified (using KDE 4.6.4) 
OS:                Linux

Using KDEPIM 4.6.0

When increasing the height of a contact details window, the widget showing the
phone numbers doesn't resize accordingly to the new window heigt.
Instead it still shows scrollbars and leaves a lot of space in the lower area of
the window unused.

See the attached screenshot for details. 


Reproducible: Always




OS: Linux (x86_64) release 2.6.38-gentoo-r6
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Anders Lund 2012-02-01 21:54:09 UTC
This appears to work in KDE 4.8.
Please reopen if you experience something else.
Comment 2 Elias Probst 2012-02-02 04:24:26 UTC
Created attachment 68422 [details]
Screenshot of issue in KDE 4.8.0

This does still happen in 4.8.0.

How to reproduce:
→ Open edit dialog for a contact
→ Resize height of window
→ Click on 'Add' below the 'Phones' list several times
Comment 3 Elias Probst 2012-02-02 04:24:55 UTC
Reopening due to comment#2
Comment 4 Christophe Marin 2012-02-07 16:15:42 UTC
valid in master.
Comment 5 Laurent Montel 2012-11-16 09:30:53 UTC
Git commit 7df0b128fdd220d47e0fccf1050de79afd551344 by Montel Laurent.
Committed on 16/11/2012 at 10:30.
Pushed by mlaurent into branch 'master'.

Fix Bug 276410 - Geometry issue - phone number widget doesn't resize

height
FIXED-IN: 4.10

M  +1    -1    akonadi/contact/editor/contacteditorwidget.cpp

http://commits.kde.org/kdepimlibs/7df0b128fdd220d47e0fccf1050de79afd551344