Fix Bug 276410 - Geometry issue - phone number widget doesn't resize

height
FIXED-IN: 4.10
BUG: 276410